<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.example.android.justjava.MainActivity"
  android:fillViewport="true"
  >

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:src="@drawable/nathan_dumlao_463043_unsplash_2"
      android:scaleType="centerCrop"
      />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="16dp"
      android:orientation="vertical">

      <EditText
        android:id="@+id/customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/customer_name_hint"
        android:textAllCaps="false"
        android:textIsSelectable="false" />

      <TextView
        android:id="@+id/toppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/toppings_title"
        android:textAllCaps="true"
        android:textIsSelectable="false" />

      <CheckBox
        android:id="@+id/has_whipped_cream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="24dp"
        android:text="@string/cb_whipped_cream"
        android:textSize="16sp" />

      <CheckBox
        android:id="@+id/has_chocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="24dp"
        android:text="@string/cb_chocolate"
        android:textSize="16sp" />

      <TextView
        android:id="@+id/lbl_Quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_quantity_title"
        android:textAllCaps="true"
        android:textIsSelectable="false" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
          android:id="@+id/btn_decrement"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_marginBottom="16dp"
          android:layout_marginRight="8dp"
          android:onClick="decrement"
          android:text="-"
          android:textAllCaps="true"
          android:textIsSelectable="false" />

        <TextView
          android:id="@+id/quantity_text_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:text="2"
          android:textColor="@android:color/black"
          android:textSize="16sp" />

        <Button
          android:id="@+id/btn_increment"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_marginLeft="8dp"
          android:onClick="increment"
          android:text="+"
          android:textAllCaps="true"
          android:textIsSelectable="false" />
      </LinearLayout>


      <TextView
        android:id="@+id/order_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_order_summary_title"
        android:textAllCaps="true"
        android:textIsSelectable="false" />

      <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:inputType="number"
        android:text="$10"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="@string/btn_order"
        android:textAllCaps="true"
        android:textIsSelectable="false" />

    </LinearLayout>


  </RelativeLayout>



</ScrollView>